--- a/index.html
+++ b/index.html
@@ -14,66 +14,48 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <div class="form-header">
-                        <div class="d1">
-                            <h2>Bank Rating Form</h2>
-                        </div>
-                        <div class="d2">
-                            <img src="image/logo.png" alt="Great Bank Logo" width="50px" height="50px"> 
-                        </div>
+                    <header class="head">
+                      <div class="d1">
+                        <h3>Bank Rating Form</h3>
+                      </div>
+                      <div class="d2">
+                        <img src="image/logo.png" width="50px" height="50px">
+                      </div>
+                    </header>
+                    <div class="row">
+                      <div class="col-3">
+                        <form>
+                          <label>Company Name</label><br>
+                          <label>Financila Institution Name</label><br>
+                          <label>Company Institution<br>Contact person</label><br>
+                          <label>Financial Institution Name</label><br>
+                          <label>Contact Phone Number</label><br>
+                          <label>Name of Account Holder</label><br>
+                          <label>Date Account opened</label><br>
+                          <label>Account Type</label><br>
+                          <label>Balance</label><br>
+                        </form>
+                        <label class="a1">Additional information</label>
+                      </div>
+                      <div class="col-9">
+                        <form>
+                          <input type="text"><br><br>
+                          <input type="text"><br><br>
+                          <input type="text"><br><br>
+                          <input type="text" class="i2"><input class="i22"><br><br>
+                          <input type="text"><br><br>
+                          <input type="text" class="i2"><input class="i22"><br><br>
+                          <input type="text" class="i1"><input class="i11"><input class="i11"><br><br>
+                          <input type="text"><br><br>
+                          <input type="text"><br><br><br>
+
+                        </form>
+                        <hr width="100%" color="black" size="4" class="gm">
+                        <hr width="100%" color="black" size="4" class="gm">
+                        <hr width="100%" color="black" size="4" class="gm">
+                      </div>
                     </div>
-                    <form>
-                        <div class="form2">
-                          <label for="company-name">Company Name</label>
-                          <input type="text" id="company-name" required>
-                        </div>
-                        <div class="form2">
-                          <label for="financial-institution">Financial Institution Name</label>
-                          <input type="text" id="financial-institution" required>
-                        </div>
-                        <div class="form2">
-                          <label for="contact-person">Contact Person</label>
-                          <input type="text" id="contact-person" required>
-                        </div>
-                        <div class="form2">
-                          <label for="contact-phone">Contact Phone Number</label>
-                          <input type="text" id="contact-phone" required>
-                        </div>
-                        <div class="form2">
-                          <label for="email">Email Address</label>
-                          <input type="email" id="email" required>
-                        </div>
-                        <div class="form2">
-                          <label for="account-holder">Name of Account Holder</label>
-                          <input type="text" id="account-holder" required>
-                        </div>
-                        <div class="form2">
-                          <label for="date-opened">Date Account Opened</label>
-                          <input type="date" id="date-opened" required>
-                        </div>
-                        <div class="form2">
-                          <label for="account-type">Account Type</label>
-                          <select id="account-type" required>
-                            <option value="savings">Savings</option>
-                            <option value="checking">Checking</option>
-                            <option value="business">Business</option>
-                          </select>
-                        </div>
-                        <div class="form2">
-                          <label for="balance">Balance</label>
-                          <input type="text" id="balance" required>
-                        </div>
-                        <div class="form1">
-                          <label for="additional-info">Additional Information</label>
-                          <textarea id="additional-info" rows="4"></textarea>
-                        </div>
-                        <div class="progress-dots">
-                          <span></span>
-                          <span></span>
-                          <span></span>
-                        </div>
-                      </form>
-                    </div>
+                    <p>&#8226; &#8226; &#8226;</p>
                 </div>
             </div>
         </div>
